<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="6dp"
    android:clickable="true"
    android:focusable="true"
    android:checkable="false"
    app:cardElevation="2dp"
    app:cardCornerRadius="16dp"
    app:cardBackgroundColor="?attr/colorSurface"
    app:strokeWidth="0dp"
    app:rippleColor="?attr/colorPrimary">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_marginBottom="8dp"
    >

    <TextView
        android:id="@+id/eventTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_title"

        android:textColor="?attr/colorOnSurfaceVariant"

        android:fontFamily="@font/jakarta_bold"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/eventDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_date"

        android:textColor="?attr/colorOnSurfaceVariant"

        android:fontFamily="@font/jakarta_regular"
        android:textSize="14sp"
        android:layout_marginTop="4dp" />

    <TextView
        android:id="@+id/eventTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_time"

        android:textColor="?attr/colorOnSurfaceVariant"

        android:fontFamily="@font/jakarta_regular"
        android:textSize="12sp"
        android:layout_marginTop="2dp" />

</LinearLayout>
</com.google.android.material.card.MaterialCardView>